--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
  
     <div class="box02"></div>
    
+    <h1>ICET</h1>
+
     <h1 class="sample_class">Sample class</h1>
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est inventore beatae sunt distinctio consequatur minus corrupti illum fugiat reprehenderit nulla nihil autem consectetur eaque dolore cupiditate, soluta expedita? Rerum, at.</P>
 
@@ -28,6 +30,6 @@
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est inventore beatae sunt distinctio consequatur minus corrupti illum fugiat reprehenderit nulla nihil autem consectetur eaque dolore cupiditate, soluta expedita? Rerum, at.</P>
 
     <div class="box03"></div>
-    
+
 </body>
 </html>
